[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Chris Dolby <csdolby@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]
actix-web = "3"
actix-rt = "1"
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.4", default-features = false, features = ["runtime-tokio-native-tls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"]}
config = "0.10"
uuid = { version = "0.8", features = ["v4"] }
chrono = "0.4"
log = "0.4"
env_logger = "0.7"
serde-aux = "1"
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = { version = "0.2", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.1"
tracing-log = "0.1"
anyhow = "1"
tracing-actix-web = "0.2"

[dev-dependencies]
reqwest = "0.10"
tokio = "0.2"
lazy_static = "1"